<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>net.shibboleth</groupId>
        <artifactId>parent-v3</artifactId>
        <version>2</version>
    </parent>

    <groupId>uk.org.ukfederation</groupId>
    <artifactId>ukf-mda</artifactId>
    <version>0.8.7</version>
    
    <name>UK federation aggregator beans</name>
    <description>
        Collection of beans supporting metadata aggregation for the UK federation,
        based on the Shibboleth metadata aggregator framework.
    </description>
    <url>https://github.com/ukf/ukf-mda</url>
    <inceptionYear>2011</inceptionYear>

    <properties>
        <checkstyle.configLocation>checkstyle.xml</checkstyle.configLocation>
    </properties>

    <repositories>
        <repository>
            <id>shib-release</id>
            <url>https://build.shibboleth.net/nexus/content/groups/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>shib-snapshot</id>
            <url>https://build.shibboleth.net/nexus/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

    <dependencies>

        <!-- Compile dependencies -->

        <dependency>
            <groupId>net.shibboleth.metadata</groupId>
            <artifactId>aggregator-pipeline</artifactId>
            <version>0.8.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.shibboleth.utilities</groupId>
            <artifactId>java-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
        </dependency>

        <!-- Provided Dependencies -->

        <!-- Runtime dependencies -->

        <!-- Test dependencies -->
        
        <dependency>
            <groupId>${spring.groupId}</groupId>
            <artifactId>spring-context</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>${spring.groupId}</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Managed Dependencies -->

        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>xml-apis</artifactId>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>xercesImpl</artifactId>
        </dependency>
        <dependency>
            <groupId>${xerces.groupId}</groupId>
            <artifactId>serializer</artifactId>
        </dependency>
        <dependency>
            <groupId>${xmlresolver.groupId}</groupId>
            <artifactId>xml-resolver</artifactId>
        </dependency>
        <dependency>
            <groupId>${xalan.groupId}</groupId>
            <artifactId>xalan</artifactId>
        </dependency>

    </dependencies>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-Djava.endorsed.dirs="target/endorsed"</compilerArgument>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Djava.endorsed.dirs="target/endorsed"</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/endorsed</outputDirectory>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>xml-apis</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>xercesImpl</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xerces.groupId}</groupId>
                                    <artifactId>serializer</artifactId>
                                    <version>${xerces.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xmlresolver.groupId}</groupId>
                                    <artifactId>xml-resolver</artifactId>
                                    <version>${xmlresolver.version}</version>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>${xalan.groupId}</groupId>
                                    <artifactId>xalan</artifactId>
                                    <version>${xalan.version}</version>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>

                </executions>
            </plugin>

            <!--
                Checkstyle configuration for checkstyle:* goals called directly
                from the command line.
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <configLocation>${checkstyle.configLocation}</configLocation>
                </configuration>
            </plugin>

        </plugins>
        
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven 
                    build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[2.1,)</versionRange>
                                        <goals>
                                            <goal>copy</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <execute />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle.version}</version>
                <configuration>
                    <configLocation>${checkstyle.configLocation}</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <scm>
        <connection>scm:git:https://github.com/ukf/ukf-mda.git</connection>
        <developerConnection>scm:git:ssh:git@github.com:ukf/ukf-mda.git</developerConnection>
        <url>https://github.com/ukf/ukf-mda</url>
    </scm>
    
    <developers>
        <developer>
            <id>iay</id>
            <name>Ian Young</name>
            <organization>EDINA, University of Edinburgh</organization>
            <organizationUrl>http://edina.ac.uk</organizationUrl>
            <timezone>0</timezone>
        </developer>
    </developers>

</project>
